@@ -12,56 +12,61 @@ import core.World.Creatures.Player.Inventory.Items.Weapons.Ammo.Bullets;
 import core.World.StaticWorldObjects.TemperatureMap;
 import core.World.Textures.*;
 import core.World.StaticWorldObjects.StaticObjectsConst;
-import core.World.StaticWorldObjects.StaticWorldObjects;
 import java.awt.Point;
-import java.awt.geom.Point2D;
 
 import static core.Window.assetsDir;
 import static core.Window.start;
 import static core.World.Creatures.Player.Inventory.Inventory.*;
-import static core.World.HitboxMap.*;
 import static core.World.StaticWorldObjects.StaticWorldObjects.*;
 import static core.World.WorldGenerator.*;
+import static core.World.WorldUtils.getBlockUnderMousePoint;
+import static core.World.WorldUtils.getDistanceToMouse;
 import static org.lwjgl.glfw.GLFW.*;
 
 public class Player {
+    public static Thread currentInteraction;
     public static boolean noClip = false;
     private static int transparencyHPline = Config.getFromConfig("AlwaysOnPlayerHPLine").equals("true") ? 220 : 0;
+    public static final int playerSize = 72;
     public static int lastDamage = 0;
     public static long lastDamageTime = System.currentTimeMillis();
     private static long lastChangeTransparency = System.currentTimeMillis(), lastChangeLengthDamage = System.currentTimeMillis();
 
+    public static void createPlayer(boolean randomSpawn) {
+        DynamicObjects.addFirst(DynamicWorldObjects.createDynamic("player", randomSpawn ? (int) (Math.random() * (SizeX * TextureDrawing.blockSize)) : SizeX * 8f));
+    }
+
     public static void updatePlayerJump() {
         if (Global.input.pressed(GLFW_KEY_SPACE)) {
-            DynamicObjects.get(0).jump(0.45f);
+            DynamicObjects.getFirst().jump(1.05f);
         }
     }
 
     public static void updatePlayerMove() {
-        float increment = noClip ? 0.5f : 0.1f;
+        float increment = noClip ? 1.6f : 0.4f;
 
-//        if (EventHandler.getKeyClick(GLFW_KEY_Q) && DynamicObjects.get(0).getAnimationSpeed() == 0) {
-//            DynamicObjects.get(0).setPath(assetsDir("World/Creatures/playerLeft/player"));
-//            DynamicObjects.get(0).setAnimationSpeed(30);
-//            setObject((int) ((DynamicObjects.get(0).getX() - 1) / 16), (int) (DynamicObjects.get(0).getY() / 16 + 1), StaticWorldObjects.decrementHp(getObject((int) ((DynamicObjects.get(0).getX() - 1) / 16), (int) (DynamicObjects.get(0).getY() / 16 + 1)), 10));
+//        if (EventHandler.getKeyClick(GLFW_KEY_Q) && DynamicObjects.getFirst().getAnimationSpeed() == 0) {
+//            DynamicObjects.getFirst().setPath(assetsDir("World/Creatures/playerLeft/player"));
+//            DynamicObjects.getFirst().setAnimationSpeed(30);
+//            setObject((int) ((DynamicObjects.getFirst().getX() - 1) / TextureDrawing.blockSize), (int) (DynamicObjects.getFirst().getY() / TextureDrawing.blockSize + 1), StaticWorldObjects.decrementHp(getObject((int) ((DynamicObjects.getFirst().getX() - 1) / TextureDrawing.blockSize), (int) (DynamicObjects.getFirst().getY() / TextureDrawing.blockSize + 1)), 10));
 //        }
-//        if (EventHandler.getKeyClick(GLFW_KEY_E) && DynamicObjects.get(0).getAnimationSpeed() == 0) {
-//            DynamicObjects.get(0).setPath(assetsDir("World/Creatures/playerRight/player"));
-//            DynamicObjects.get(0).setAnimationSpeed(30);
-//            setObject((int) (DynamicObjects.get(0).getX() / 16 + 2), (int) (DynamicObjects.get(0).getY() / 16 + 1), StaticWorldObjects.decrementHp(getObject((int) (DynamicObjects.get(0).getX() / 16 + 2), (int) (DynamicObjects.get(0).getY() / 16 + 1)), 10));
+//        if (EventHandler.getKeyClick(GLFW_KEY_E) && DynamicObjects.getFirst().getAnimationSpeed() == 0) {
+//            DynamicObjects.getFirst().setPath(assetsDir("World/Creatures/playerRight/player"));
+//            DynamicObjects.getFirst().setAnimationSpeed(30);
+//            setObject((int) (DynamicObjects.getFirst().getX() / TextureDrawing.blockSize + 2), (int) (DynamicObjects.getFirst().getY() / TextureDrawing.blockSize + 1), StaticWorldObjects.decrementHp(getObject((int) (DynamicObjects.getFirst().getX() / TextureDrawing.blockSize + 2), (int) (DynamicObjects.getFirst().getY() / TextureDrawing.blockSize + 1)), 10));
 //        }
 
-        if (Global.input.pressed(GLFW_KEY_D) && DynamicObjects.get(0).getX() + 24 < SizeX * 16 && (noClip || !checkIntersStaticR(DynamicObjects.get(0).getX() + 0.1f, DynamicObjects.get(0).getY(), 24, 24))) {
-            DynamicObjects.get(0).setMotionVectorX(increment);
+        if (Global.input.pressed(GLFW_KEY_D)) {
+            DynamicObjects.getFirst().setMotionVectorX(increment);
         }
-        if (Global.input.pressed(GLFW_KEY_A) && DynamicObjects.get(0).getX() > 0 && (noClip || !checkIntersStaticL(DynamicObjects.get(0).getX() - 0.1f, DynamicObjects.get(0).getY(), 24))) {
-            DynamicObjects.get(0).setMotionVectorX(-increment);
+        if (Global.input.pressed(GLFW_KEY_A)) {
+            DynamicObjects.getFirst().setMotionVectorX(-increment);
         }
         if (noClip && Global.input.pressed(GLFW_KEY_S)) {
-            DynamicObjects.get(0).setMotionVectorY(-increment);
+            DynamicObjects.getFirst().setMotionVectorY(-increment);
         }
         if (noClip && Global.input.pressed(GLFW_KEY_W)) {
-            DynamicObjects.get(0).setMotionVectorY(increment);
+            DynamicObjects.getFirst().setMotionVectorY(increment);
         }
     }
 
@@ -73,20 +78,20 @@ public class Player {
 
     private static void updatePlaceableInteraction() {
         if (currentObjectType == Items.Types.PLACEABLE && Global.input.justClicked(GLFW_MOUSE_BUTTON_LEFT)) {
-            Point mouse = Global.input.mousePos();
-            int xBound = (Inventory.inventoryOpen ? 1488 : 1866);
-            if (mouse.x > xBound && mouse.y > 756) {
-                return;
+            if (Global.input.mousePos().x > (Inventory.inventoryOpen ? 1488 : 1866)) {
+                if (Global.input.mousePos().y > 756) {
+                    return;
+                }
             }
             Point blockUMB = getBlockUnderMousePoint();
 
-            if (getType(getObject(blockUMB.x, blockUMB.y)) == StaticObjectsConst.Types.GAS && Player.getDistanceUnderMouse() < 9) {
+            if (getType(getObject(blockUMB.x, blockUMB.y)) == StaticObjectsConst.Types.GAS && getDistanceToMouse() < 9) {
+                Items item = Inventory.getCurrent();
                 int blockX = blockUMB.x;
                 int blockY = blockUMB.y;
 
-                if (currentObject != null) {
-                    short placeable = Inventory.getCurrent().placeable;
-                    updatePlaceableBlock(placeable, blockX, blockY);
+                if (item != null && item.placeable != 0) {
+                    updatePlaceableBlock(item.placeable, blockX, blockY);
                 }
             }
         }
@@ -121,8 +126,10 @@ public class Player {
     }
 
     private static void updateToolInteraction() {
-        if (currentObjectType == Items.Types.TOOL && currentObject != null) {
-            Tools tool = Inventory.getCurrent().tool;
+        Items item = Inventory.getCurrent();
+        if (item != null && item.tool != null) {
+
+            Tools tool = item.tool;
             Point blockUMB = getBlockUnderMousePoint();
             int blockX = blockUMB.x;
             int blockY = blockUMB.y;
@@ -137,14 +144,14 @@ public class Player {
     }
 
     private static void updateNonStructure(int blockX, int blockY, short object, Tools tool) {
-        if (getDistanceUnderMouse() <= tool.maxInteractionRange && ShadowMap.getDegree(blockX, blockY) == 0) {
+        if (getDistanceToMouse() <= tool.maxInteractionRange && ShadowMap.getDegree(blockX, blockY) == 0) {
             drawBlock(blockX, blockY, object, true);
 
             if (Global.input.justClicked(GLFW_MOUSE_BUTTON_LEFT) && getId(object) != 0 && System.currentTimeMillis() - tool.lastHitTime >= tool.secBetweenHits && getHp(object) > 0) {
                 tool.lastHitTime = System.currentTimeMillis();
 
                 if (getHp(decrementHp(object, (int) tool.damage)) <= 0) {
-                    createElementPlaceable(object, "none");
+                    createElementPlaceable(object);
                     destroyObject(blockX, blockY);
                 } else {
                     setObject(blockX, blockY, decrementHp(object, (int) tool.damage));
@@ -162,32 +169,23 @@ public class Player {
             blockX = root.x;
             blockY = root.y;
 
-            if (getDistanceUnderMouse() <= tool.maxInteractionRange && ShadowMap.getDegree(blockX, blockY) == 0) {
-                drawStructure(blockX, blockY, true, getObject(root.x, root.y), StaticObjectsConst.getConst(StaticWorldObjects.getId(getObject(blockX, blockY))).optionalTiles);
+            if (getDistanceToMouse() <= tool.maxInteractionRange && ShadowMap.getDegree(blockX, blockY) == 0) {
+                drawBlock(blockX, blockY, getObject(root.x, root.y), true);
 
                 if (Global.input.justClicked(GLFW_MOUSE_BUTTON_LEFT) && getId(object) != 0 && System.currentTimeMillis() - tool.lastHitTime >= tool.secBetweenHits && getHp(object) > 0) {
                     tool.lastHitTime = System.currentTimeMillis();
-                    decrementHpMulti(blockX, blockY, (int) tool.damage);
+                    decrementHpMulti(blockX, blockY, (int) tool.damage, root);
                 }
             } else {
-                drawStructure(blockX, blockY, false, getObject(root.x, root.y), StaticObjectsConst.getConst(StaticWorldObjects.getId(getObject(blockX, blockY))).optionalTiles);
-            }
-        }
-    }
-
-    public static void drawStructure(int blockX, int blockY, boolean breakable, short root, short[][] tiles) {
-        drawBlock(blockX, blockY, root, breakable);
-        for (int x = 0; x < tiles.length; x++) {
-            for (int y = 0; y < tiles[0].length; y++) {
-
-                if (tiles[x][y] != 0) {
-                    drawBlock(x + blockX, y + blockY, tiles[x][y], breakable);
-                }
+                drawBlock(blockX, blockY, getObject(root.x, root.y), false);
             }
         }
     }
 
     public static Point findRoot(int cellX, int cellY) {
+        if (!StaticObjectsConst.getConst(getId(getObject(cellX, cellY))).hasMotherBlock && StaticObjectsConst.getConst(getId(getObject(cellX, cellY))).optionalTiles == null) {
+            return null;
+        }
         int maxCellsX = 4;
         int maxCellsY = 4;
 
@@ -202,9 +200,7 @@ public class Player {
         return null;
     }
 
-    private static void decrementHpMulti(int cellX, int cellY, int hp) {
-        Point root = findRoot(cellX, cellY);
-
+    private static void decrementHpMulti(int cellX, int cellY, int hp, Point root) {
         if (root != null && getObject(root.x, root.y) != 0) {
             short rootObj = getObject(root.x, root.y);
 
@@ -213,7 +209,7 @@ public class Player {
                     short object = getObject(x + cellX, y + cellY);
 
                     if (getHp(decrementHp(object, hp)) <= 0 && getType(object) != StaticObjectsConst.Types.GAS) {
-                        createElementPlaceable(rootObj, "");
+                        createElementPlaceable(rootObj);
                         destroyObject(cellX, cellY);
                         break;
                     } else if (getType(object) != StaticObjectsConst.Types.GAS) {
@@ -228,46 +224,18 @@ public class Player {
         SimpleColor color = ShadowMap.getColor(cellX, cellY);
         int a = (color.getRed() + color.getGreen() + color.getBlue()) / 3;
         SimpleColor blockColor = breakable ? new SimpleColor(Math.max(0, a - 150), Math.max(0, a - 150), a, 255) : new SimpleColor(a, Math.max(0, a - 150), Math.max(0, a - 150), 255);
-        int xBlock = cellX * 16;
-        int yBlock = cellY * 16;
+        int xBlock = cellX * TextureDrawing.blockSize;
+        int yBlock = cellY * TextureDrawing.blockSize;
 
         if (getHp(obj) > getMaxHp(obj) / 1.5f) {
-            TextureDrawing.drawTexture(getPath(obj), xBlock, yBlock, 3f, blockColor, false, false);
+            TextureDrawing.drawTexture(xBlock, yBlock, 1f, false, false, getPath(obj), blockColor);
 
         } else if (getHp(obj) < getMaxHp(obj) / 3) {
-            TextureDrawing.drawMultiTexture(getPath(obj), assetsDir("World/Blocks/damaged1.png"), xBlock, yBlock, 3f, blockColor, false, false);
+            TextureDrawing.drawMultiTexture(xBlock, yBlock, 1f, false, false, getPath(obj), assetsDir("World/Blocks/damaged1.png"), blockColor);
 
         } else {
-            TextureDrawing.drawMultiTexture(getPath(obj), assetsDir("World/Blocks/damaged0.png"), xBlock, yBlock, 3f, blockColor, false, false);
+            TextureDrawing.drawMultiTexture(xBlock, yBlock, 1f, false, false, getPath(obj), assetsDir("World/Blocks/damaged0.png"), blockColor);
         }
-    }
-
-    public static void drawBlock(int cellX, int cellY, String path, boolean breakable) {
-        SimpleColor color = ShadowMap.getColor(cellX, cellY);
-        int a = (color.getRed() + color.getGreen() + color.getBlue()) / 3;
-        SimpleColor blockColor = breakable ? new SimpleColor(Math.max(0, a - 150), Math.max(0, a - 150), a, 255) : new SimpleColor(a, Math.max(0, a - 150), Math.max(0, a - 150), 255);
-        int xBlock = cellX * 16;
-        int yBlock = cellY * 16;
-
-        TextureDrawing.drawTexture(path, xBlock, yBlock, 3f, blockColor, false, false);
-    }
-
-    public static Point getBlockUnderMousePoint() {
-        int blockX = (int) Math.max(0, Math.min(getWorldMousePoint().x / 16, SizeX));
-        int blockY = (int) Math.max(0, Math.min(getWorldMousePoint().y / 16, SizeY));
-
-        return new Point(blockX, blockY);
-    }
-
-    public static Point2D.Float getWorldMousePoint() {
-        float blockX = ((Global.input.mousePos().x - 960) / 3f + 16) + DynamicObjects.get(0).getX();
-        float blockY = ((Global.input.mousePos().y - 540) / 3f + 64) + DynamicObjects.get(0).getY();
-
-        return new Point2D.Float(blockX, blockY);
-    }
-
-    public static int getDistanceUnderMouse() {
-        return (int) Math.abs((DynamicObjects.get(0).getX() / 16 - getBlockUnderMousePoint().x) + (DynamicObjects.get(0).getY() / 16 - getBlockUnderMousePoint().y));
     }
 
     public static void updatePlayerGUI() {
@@ -288,7 +256,7 @@ public class Player {
     }
 
     private static void updateTemperatureEffect() {
-        DynamicWorldObjects player = DynamicObjects.get(0);
+        DynamicWorldObjects player = DynamicObjects.getFirst();
         int temp = (int) TemperatureMap.getAverageTempAroundDynamic(player.getX(), player.getY(), player.getPath());
         int upperLimit = 100;
         int lowestLimit = -20;
@@ -304,20 +272,20 @@ public class Player {
         int r = temp > 0 ? a : 0;
         int b = temp > 0 ? 0 : a;
 
-        TextureDrawing.drawTexture(assetsDir("\\UI\\GUI\\modifiedTemperature.png"), 0, 0, 1, new SimpleColor(r, (int) (b / 2f), b, a), true, false);
+        TextureDrawing.drawTexture(0, 0, 1, true, false, assetsDir("\\UI\\GUI\\modifiedTemperature.png"), new SimpleColor(r, (int) (b / 2f), b, a));
     }
 
     public static void playerMaxHP() {
-        DynamicObjects.get(0).setCurrentHp(DynamicObjects.get(0).getMaxHp());
+        DynamicObjects.getFirst().setCurrentHp(DynamicObjects.getFirst().getMaxHp());
     }
 
     public static void playerKill() {
-        DynamicObjects.get(0).setCurrentHp(0);
+        DynamicObjects.getFirst().setCurrentHp(0);
     }
 
     private static void drawCurrentHP() {
-        int currentHp = (int) DynamicObjects.get(0).getCurrentHP();
-        int maxHp = (int) DynamicObjects.get(0).getMaxHp();
+        int currentHp = (int) DynamicObjects.getFirst().getCurrentHP();
+        int maxHp = (int) DynamicObjects.getFirst().getMaxHp();
 
         if (currentHp == maxHp && transparencyHPline > 0 && System.currentTimeMillis() - lastChangeTransparency >= 10 && !Config.getFromConfig("AlwaysOnPlayerHPLine").equals("true")) {
             lastChangeTransparency = System.currentTimeMillis();
